--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
         android:theme="@style/Theme.CondSpeak"
         tools:targetApi="31">
         <activity
+            android:name=".chat.Escolha_Chat"
+            android:exported="false" />
+        <activity
+            android:name=".chat.Chat_usuario_dono"
+            android:exported="false" />
+        <activity
+            android:name=".reclamacao.Tela_de_reclamacao"
+            android:exported="false" />
+        <activity
             android:name=".Telaquaseprincipal"
             android:exported="false" />
         <activity
