--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CondSpeak"
         tools:targetApi="31">
+        <activity android:name=".chat.Escolha_Chat"
+            android:exported="false" />
         <activity
             android:name=".chat.Chat_condominio"
             android:exported="false" />
