--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.CondSpeak"
         tools:targetApi="31">
         <activity
+            android:name=".listademembros.Lista_de_Membros"
+            android:exported="false" />
+        <activity
             android:name=".chat.chatcondominio.Chat_condominio"
             android:exported="false" />
         <activity
