--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.CondSpeak"
         tools:targetApi="31">
         <activity
+            android:name=".ui.selecionar_condominio.SelecionaCondominio"
+            android:exported="false" />
+        <activity
             android:name=".ui.perfil_user.Perfil_user"
             android:exported="false" />
         <activity
@@ -42,12 +45,6 @@
             android:name=".extra.Telaquaseprincipal"
             android:exported="false" />
         <activity
-            android:name=".selcionacond.CardViewHolder"
-            android:exported="false" />
-        <activity
-            android:name=".selcionacond.Tela_Principal"
-            android:exported="false" />
-        <activity
             android:name=".ui.registercondominio.CadastroCondominioActivity"
             android:exported="false" />
         <activity
@@ -69,5 +66,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
