--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
         android:theme="@style/Theme.CondSpeak"
         tools:targetApi="31">
         <activity
+            android:name=".NavigationDr"
+            android:exported="false"
+            android:label="@string/title_activity_navigation_dr"
+            android:theme="@style/Theme.CondSpeak.NoActionBar" />
+        <activity
+            android:name=".Navi_Main"
+            android:exported="false"
+            android:theme="@style/Theme.CondSpeak" />
+        <activity
             android:name=".ui.selecionar_condominio.SelecionaCondominio"
             android:exported="false" />
         <activity
@@ -66,4 +75,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
