--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.CondSpeak"
         tools:targetApi="31">
         <activity
+            android:name=".Drawer_and_Bottom_Nav"
+            android:exported="false" />
+        <activity
             android:name=".NavigationDr"
             android:exported="false"
             android:label="@string/title_activity_navigation_dr"
